# cmake-exercise

./: CMakeLists.txt  find.c  find.h  main.c  sort.c  sort.h
